CCEB: Correcion en presentación del preview y búsqueda por contenido también se actualizo a openkm 8.1.12